More Layout design

--- a/client/src/layout.css
+++ b/client/src/layout.css
@@ -33,3 +33,31 @@
     height: 82vh;
     width: 100%;
 }
+
+.menu {
+    margin-top: 100px;
+}
+
+.menu-item {
+    margin-top: 30px;
+}
+
+.menu-item a{
+    color: rgba(255, 255, 255, 0.727);
+    text-decoration: none;
+    font-size: 18px;
+}
+
+.menu-item i{
+    color: rgba(255, 255, 255, 0.716);
+    text-decoration: none;
+    font-size: 18px;
+    margin: 0 15px;
+}
+
+.active-menu-item{
+    color: white;
+    background-color: #013737;
+    padding: 5px;
+    border-radius: 5px;
+}
