More Layout design

--- a/client/src/layout.css
+++ b/client/src/layout.css
@@ -24,6 +24,9 @@
     box-shadow: 0 0 2px gray;
     margin-bottom: 20px;
     height: 10vh;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
 .body {
@@ -60,4 +63,9 @@
     background-color: #013737;
     padding: 5px;
     border-radius: 5px;
+}
+
+.close-icon{
+    font-size: 20px;
+    color: black;
 }
