--- a/client/src/layout.css
+++ b/client/src/layout.css
@@ -2,6 +2,12 @@
     padding: 20px;
 }
 
+.logo {
+    color: white;
+    font-weight: bold;
+
+}
+
 .sidebar {
     background-color: #005555;
     border-radius: 5px;
